# admiral

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  Tauri.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  pty.rs  state.rs
src/components/: AddInstance.tsx  Sidebar.tsx  Terminal.tsx
